# oop_lab_2_xml

./: .gitignore  README.md  mainwindow.ui  pyproject.toml
scripts/: format.sh  lint.sh  ui2py.sh
src/: common.py  conftest.py  exporter.py  main.py  models.py
src/resources/: export_template.html
src/strategies/: __init__.py  base.py  bs4.py  dom.py  sax.py
src/tests/: test_exporter.py
src/tests/data/: sample1.xml
src/tests/strategies/: test_bs4.py  test_dom.py  test_sax.py
src/ui/: filters.py  mainwindow.py  mainwindow_ui.py  table.py
